master with experimental openmandriva support

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   neofetch-5.0.0.tar.gz: 431df04fcb3a34e701db83d3fe43732a451a1ee4
+  neofetch-801760a01ba7cce2d2c0d02f704c75bd36adceae.zip: b680dcc86f903b6c732ba9c44f7144631cb46993
